Fix vertical overflow of canvas

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body{
     background-color: rgb(15, 15, 15);
     scroll-behavior: smooth;
+    margin : 0;
 }
 
 #frijoles{
@@ -20,7 +21,6 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; 
     border: 2px solid wheat;
 }
 
